[FIX] README + cleaning code

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,14 @@
-cobra
-pandas
-numpy==1.16.5
+cobra~=0.21.0
+pandas~=1.2.3
+numpy~=1.19.2
 python-libsbml
-requests
+requests~=2.22.0
 biopython
 lxml
 openpyxl
-biocyc
-sympy
-neo4j
-cobrababel
+biocyc~=0.2.0
+sympy~=1.7.1
+neo4j~=4.2.1
+cobrababel~=0.1.3
+rdkit~=2020.09.1.0
+setuptools~=52.0.0
