--- a/requirements.txt
+++ b/requirements.txt
@@ -10,6 +10,9 @@ biocyc~=0.2.0
 sympy~=1.7.1
 neo4j~=4.2.1
 cobrababel~=0.1.3
-rdkit~=2020.09.1.0
+rdkit
 setuptools~=61.2.0
 apache-airflow==1.10.12
+joblib
+tqdm
+jinja2
