--- a/pipelines/synonyms_etl/Dockerfile
+++ b/pipelines/synonyms_etl/Dockerfile
@@ -30,6 +30,7 @@ COPY ./ .
 
 # install setup.py
 RUN python "setup.py" install
+RUN python "pipelines/synonyms_etl/setup_database_credentials.py"
 
 # run script test_etl.py with python
 CMD ["python","pipelines/synonyms_etl/etl_pipeline.py"]
