--- a/setup.cfg
+++ b/setup.cfg
@@ -34,7 +34,7 @@ install_requires =
     sympy~=1.7.1
     neo4j~=4.2.1
     cobrababel~=0.1.3
-    rdkit
+    rdkit-pypi==2022.9.4
     setuptools~=52.0.0
 
 [options.packages.find]
